Lab-6-broken-ingress-Lab6/ing-solution.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    # Most tutorials say to put the class here, but modern K8s wants 
    # the spec field. We will leave both out.
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   ### Add this
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
